Fix CSS so menu doesn't disappear behind splash image on close

--- a/src/components/MobileMenu/index.module.css
+++ b/src/components/MobileMenu/index.module.css
@@ -7,6 +7,7 @@
     /* add slide open effect for menu */
     transition: height 0.3s linear;
     overflow: hidden; 
+    z-index: 1;
 
     display: flex;
     flex-direction: column;
@@ -33,7 +34,6 @@
 
 .visible {
     height: 100vh;
-    z-index: 1000;
 }
 
 
