--- a/src/components/splash/SplashImage/index.module.css
+++ b/src/components/splash/SplashImage/index.module.css
@@ -3,7 +3,6 @@
   justify-content: center;
   width: 100vw;
   overflow: hidden;
-  z-index: -99;
   background-color: #000000;
 }
 
